# mdformat_pyproject

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
mdformat_pyproject/: cli.py
