[tool.poetry]
name = "mdformat_pyproject"
version = "0.1.0"
description = "Adds an interface to mdformat that reads from pyproject.toml"
authors = ["J. Sebastian Paez <jspaezp@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "mdformat_pyproject"}]

[tool.poetry.dependencies]
python = ">3.8,<3.12"
mdformat = "^0.7.16"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mdformat_pyproject = "mdformat_pyproject.cli:run"
mdformatp = "mdformat_pyproject.cli:run"


[tool.mdformat]
wrap = 120
